# firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
base_station/: main.py  requirements.txt
lib/WiFiNINA/: CMakeLists.txt
lib/WiFiNINA/src/: CMakeLists.txt
lib/arduino_core/: CMakeLists.txt  pgmspace.h
lib/arduino_core/avr/: pgmspace.h
lib/ekf_engl/: CMakeLists.txt  konfig.h  matrix.h
lib/ukf_engl/: CMakeLists.txt  konfig.h  matrix.h
src/: CMakeLists.txt  FreeRTOSConfig.h  LSM6DSOXdefines.h  bluetooth.c  bluetooth.h  console.c  console.h  constants.h  controller.c  controller.h  debug.c  debug.h  drive_esc  drive_esc.c  drive_esc.h  encoder.c  encoder.h  esc.c  esc_pid.c  heartbeat.c  heartbeat.h  imu.c  imu.cpp  imu.h  kalman.cpp  kalman.h  lidar.c  lidar.h  log.c  log.h  main.c  main.cpp  pid.h  servo.c  servo.h  simple_encoder_substep.c  simple_encoder_substep.pio
src/controllers/: esc.c  esc.h  servo.c  simple_encoder_substep.c  speed_controller.c  speed_controller.h  suspension_controller.c  suspension_controller.h
src/encoder/: encoder.c  encoder.h  simple_encoder_substep.c  simple_encoder_substep.h  simple_encoder_substep.pio
src/imu/: LSM6DSOX.cpp  LSM6DSOX.h  imu.c  imu.cpp  imu.h
src/lidar/: lidar.c  lidar.h  lidar.txt
src/sensors/: imu.c  imu.h  lidar.c  lidar.h  simple_encoder_substep.c
src/sensors/encoder/: encoder.h  simple_encoder_substep.pio
src/sensors/imu/: LSM6DSOXdefines.h
src/tasks/: config.h  debug_task.c  debug_task.h  heartbeat.c  heartbeat.h  wifi_task.c  wifi_task.h
src/utils/: FreeRTOSConfig.h  freeRTOSHelpers.c  kalman.cpp  kalman.h  log.c  log.h
